aws-cdkv2/eks-vpc-cdk/eks_vpc_cdk/kubernetes-manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod-hello
  labels:
    name: prod-hello
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod-hello-deployment
  namespace: prod-hello
  labels:
    app: prod-hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prod-hello
  template:
    metadata:
      labels:
        app: prod-hello
    spec:
      containers:
      - name: hello-container
        image: 575108957879.dkr.ecr.us-east-1.amazonaws.com/hello/swatops13032:latest
        ports:
        - containerPort: 80
          protocol: TCP
        imagePullPolicy: Always
      nodeSelector:
        eks.amazonaws.com/nodegroup: prod-hello-ng
---
apiVersion: v1
kind: Service
metadata:
  name: prod-hello-service
  namespace: prod-hello
  labels:
    app: prod-hello
spec:
  type: NodePort
  selector:
    app: prod-hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-hello-ingress
  namespace: prod-hello
  annotations:
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: prod-eks-sre-hello-alb
    alb.ingress.kubernetes.io/group.name: prod-hello
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-hello-service
            port:
              number: 80
